<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="false" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/register_div"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dip"
                android:padding="15dip" >

                <EditText
                    android:id="@+id/register_name_edit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/register_name_edit"
                    android:inputType="text"
                    android:singleLine="true" />

                <LinearLayout
                    android:id="@+id/register_sex_linear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/register_name_edit"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal" >

                    <RadioGroup
                        android:id="@+id/register_sex_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/register_sex_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/register_sex_edit"
                            android:textSize="20dp" />

                        <RadioButton
                            android:id="@+id/register_sex1_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="男" />

                        <RadioButton
                            android:id="@+id/register_sex2_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="女" />
                    </RadioGroup>
                </LinearLayout>

                <EditText
                    android:id="@+id/register_class_name_edit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/register_sex_linear"
                    android:layout_marginTop="16dp"
                    android:hint="@string/register_class_name_edit"
                    android:inputType="text"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/register_long_cell_phone_edit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/register_class_name_edit"
                    android:layout_marginTop="16dp"
                    android:hint="@string/register_long_cell_phone_edit"
                    android:inputType="phone"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/register_brief_cell_phone_edit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/register_long_cell_phone_edit"
                    android:layout_marginTop="16dp"
                    android:hint="@string/register_brief_cell_phone_edit"
                    android:inputType="phone"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/register_qq_edit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/register_brief_cell_phone_edit"
                    android:layout_marginTop="16dp"
                    android:hint="@string/register_qq_edit"
                    android:inputType="number"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/register_wechant_edit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/register_qq_edit"
                    android:layout_marginTop="16dp"
                    android:hint="@string/register_wechant_edit"
                    android:inputType="text"
                    android:singleLine="true" />

                <Button
                    android:id="@+id/register_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/register_wechant_edit"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/bg_alibuybutton_login"
                    android:text="@string/confirmbutton" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>