<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    tools:context="scau.info.volunteertime.activity.login.Login"
    tools:ignore="MergeRootFrame" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="false" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/ivLoginIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:contentDescription="@string/loginTopIcon"
                android:src="@drawable/huanon" />

            <RelativeLayout
                android:id="@+id/login_div"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dip"
                android:padding="15dip" >

                <EditText
                    android:id="@+id/login_username_edit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/loginusername"
                    android:inputType="text"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/login_password_edit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/login_username_edit"
                    android:layout_marginTop="16dp"
                    android:hint="@string/loginpassword"
                    android:inputType="textPassword"
                    android:singleLine="true" />

                <Button
                    android:id="@+id/signin_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/login_password_edit"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/bg_alibuybutton_login"
                    android:text="@string/loginbutton" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>