<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    tools:context="scau.info.volunteertime.activity.settings.ResetPasswordActivity"
    tools:ignore="MergeRootFrame" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="false" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/login_div"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dip"
                android:padding="15dip" >

                <EditText
                    android:id="@+id/orign_password_edit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/orignpassword"
                    android:inputType="textPassword"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/new_password_edit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/orign_password_edit"
                    android:layout_marginTop="16dp"
                    android:hint="@string/newpassword"
                    android:inputType="textPassword"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/new_repassword_edit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/new_password_edit"
                    android:layout_marginTop="16dp"
                    android:hint="@string/newrepassword"
                    android:inputType="textPassword"
                    android:singleLine="true" />

                <Button
                    android:id="@+id/confirm_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/new_repassword_edit"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/bg_alibuybutton_login"
                    android:text="@string/confirmbutton" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>